--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ mysql:
   path: 127.0.0.1
   port: 3306
   config: "charset=utf8mb4&parseTime=True&loc=Local"
-  db-name: market
+  db-name: market-api
   username: root
   password: 123456
   max-idle-conns: 10
